# common/src/dto/recover_user_request_dto.rs
@@ -1,0 +1,6 @@
+use serde::{Deserialize, Serialize};
+
+#[derive(Clone, Serialize, Deserialize)]
+pub struct RecoverUserRequestDto {
+    pub recovery_code: String,
+}
