# common/src/dto/recovery_code_dto.rs
@@ -1,0 +1,7 @@
+use serde::{Deserialize, Serialize};
+
+#[derive(Clone, Serialize, Deserialize)]
+pub struct RecoveryCodeDto {
+    pub recovery_code: String,
+    pub expires_at: i64,
+}
